:rocket: Endpoint to add watchlist for user
